--- a/src/Views/MainPage.xaml
+++ b/src/Views/MainPage.xaml
@@ -1,6 +1,7 @@
 ﻿<Page x:Class="Sunshine.UWP.Views.MainPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:converters="using:Sunshine.UWP.Converters"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:designViewModels="using:Sunshine.UWP.ViewModels.Design"
       xmlns:local="using:Sunshine.UWP.Views"
@@ -9,13 +10,19 @@
       d:DataContext="{d:DesignInstance designViewModels:MainPageDesignViewModel,
                                        IsDesignTimeCreatable=True}"
       mvvm:ViewModelLocator.AutoWireViewModel="True"
+      Language="pt-BR"
       mc:Ignorable="d">
+
+    <Page.Resources>
+        <converters:IconeStatusConverter x:Key="IconeStatusConverter" />
+        <converters:DataExtensoConverter x:Key="DataExtensoConverter" />
+    </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <ListView ItemsSource="{Binding Previsoes}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"></Setter>
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.HeaderTemplate>
@@ -33,29 +40,47 @@
 
                         <TextBlock Margin="50,10,0,0"
                                    Foreground="{StaticResource ColorWhite}"
-                                   Text="Hoje" />
-                        <TextBlock Grid.Row="1"
-                                   Grid.Column="0"
-                                   Margin="50,10,0,0"
-                                   Foreground="{StaticResource ColorWhite}"
-                                   Style="{StaticResource SubheaderTextBlockStyle}"
-                                   Text="28" />
-                        <TextBlock Grid.Row="2"
-                                   Grid.Column="0"
-                                   Margin="50,10,0,0"
-                                   Foreground="{StaticResource ColorWhite}"
-                                   Style="{StaticResource TitleTextBlockStyle}"
-                                   Text="28" />
+                                   Text="{Binding Previsoes[0].Data,
+                                                  Converter={StaticResource DataExtensoConverter}}" />
+                        <StackPanel Grid.Row="1"
+                                    Grid.Column="0"
+                                    Orientation="Horizontal">
+                            <TextBlock Margin="50,10,0,0"
+                                       Foreground="{StaticResource ColorWhite}"
+                                       Style="{StaticResource SubheaderTextBlockStyle}"
+                                       Text="{Binding Previsoes[0].Maxima}" />
+                            <TextBlock Margin="0,10,0,0"
+                                       Foreground="{StaticResource ColorWhite}"
+                                       Style="{StaticResource SubheaderTextBlockStyle}"
+                                       Text="º" />
+                        </StackPanel>
+                        <StackPanel Grid.Row="2"
+                                    Grid.Column="0"
+                                    Margin="50,10,0,0"
+                                    Orientation="Horizontal">
+                            <TextBlock Foreground="{StaticResource ColorWhite}"
+                                       Style="{StaticResource TitleTextBlockStyle}"
+                                       Text="28" />
+                            <TextBlock Foreground="{StaticResource ColorWhite}"
+                                       Style="{StaticResource TitleTextBlockStyle}"
+                                       Text="º" />
+                        </StackPanel>
+
                         <Image Grid.Row="0"
-                               Grid.RowSpan="3"
+                               Grid.RowSpan="2"
                                Grid.Column="1"
-                               Source="/Assets/Icones/art_rain.png" />
+                               Width="100"
+                               Height="100"
+                               Source="{Binding Previsoes[0].Status,
+                                                Converter={StaticResource IconeStatusConverter},
+                                                ConverterParameter='art_'}"
+                               Stretch="Fill" />
                         <TextBlock Grid.Row="2"
                                    Grid.Column="1"
                                    HorizontalAlignment="Center"
                                    VerticalAlignment="Center"
                                    Foreground="{StaticResource ColorWhite}"
-                                   Text="Chuva" />
+                                   Text="{Binding Previsoes[0].Status}" />
                     </Grid>
                 </DataTemplate>
             </ListView.HeaderTemplate>
@@ -67,14 +92,26 @@
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="50" />
                         </Grid.ColumnDefinitions>
-                        <Image Grid.Column="0" Source="/Assets/Icones/art_clouds.png"/>
+                        <Image Grid.Column="0"
+                               Width="32"
+                               Height="32"
+                               Source="{Binding Status,
+                                                Converter={StaticResource IconeStatusConverter},
+                                                ConverterParameter='ic_'}"
+                               Stretch="Fill" />
                         <StackPanel Grid.Column="1">
-                            <TextBlock Text="{Binding Data}" />
+                            <TextBlock Text="{Binding Data, Converter={StaticResource DataExtensoConverter}}" />
                             <TextBlock Text="{Binding Status}" />
                         </StackPanel>
                         <StackPanel Grid.Column="2">
-                            <TextBlock Text="{Binding Maxima}" />
-                            <TextBlock Text="{Binding Minima}"/>
+                            <TextBlock FontSize="15" FontWeight="Black">
+                                <Run Text="{Binding Maxima}" />
+                                <Run Text="º" />
+                            </TextBlock>
+                            <TextBlock Style="{StaticResource CaptionTextBlockStyle}">
+                                <Run Text="{Binding Minima}" />
+                                <Run Text="º" />
+                            </TextBlock>
                         </StackPanel>
                     </Grid>
                 </DataTemplate>
